@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020160319"
-#define public MagickPackageReleaseDate "snapshot-20160319"
+#define public MagickPackageVersionAddendum ".020160320"
+#define public MagickPackageReleaseDate "snapshot-20160320"
