@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x171401
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 17,14,1
-#define MagickChangeDate   "20160319"
-#define MagickReleaseDate  "snapshot-20160319"
+#define MagickChangeDate   "20160320"
+#define MagickReleaseDate  "snapshot-20160320"
 	
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
