@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2016-03-20  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/svg.c: Fix heap buffer overflow when reading file
+&quot;aaphrbkwwe.svg.4495884156523242589&quot; from CVE-2016-2317 problem
+files.  Partial fix for SourceForge bug #358 &quot;CVE-2016-2317 - SVG
+heap/stack buffer overflows&quot;.</li>
+</ul>
+</blockquote>
 <p>2016-03-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
